--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a class="header-link" href="#">Клиенты</a>
           </li>
           <li class="header-navigation-item">
-            <a class="header-link" href="/catalog.html">Магазин</a>
+            <a class="header-link" href="./catalog.html">Магазин</a>
           </li>
           <li class="header-navigation-item">
             <a class="header-link" href="#">Контакты</a>
