Модальное окно, слайдер, кастомная геометка

--- a/catalog.html
+++ b/catalog.html
@@ -14,11 +14,12 @@
     />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/normalize.css" />
+    <script src="./script/modal.js" defer></script>
   </head>
   <body>
     <header>
       <nav class="header-navigation container">
-        <a href="/index.html"
+        <a href="./index.html"
           ><img
             class="header-logo"
             src="img/nerds-logo.svg"
@@ -209,11 +210,21 @@
           <ul class="projects-cards-list">
             <li class="project-card">
               <img class="card-image" src="img/sedona.jpg" alt="sedona" />
-              <div></div>
+              <div class="card-info">
+                <h3 class="card-title">Sedona</h3>
+                <p class="card-description">Информационный сайт для туристов</p>
+                <a class="card-price button" href="#">9 900 ₽</a>
+              </div>
             </li>
             <li class="project-card">
               <img class="card-image" src="img/pink_app.png" alt="pink app" />
-              <div></div>
+              <div class="card-info">
+                <h3 class="card-title">Pink App</h3>
+                <p class="card-description">
+                  Продуктовый лендинг приложения для iOS и Android
+                </p>
+                <a class="card-price button" href="#">9 900 ₽</a>
+              </div>
             </li>
             <li class="project-card">
               <img
@@ -221,19 +232,41 @@
                 src="img/barbershop.png"
                 alt="borodinskiy"
               />
-              <div></div>
+              <div class="card-info">
+                <h3 class="card-title">Barbershop</h3>
+                <p class="card-description">
+                  Сайт салона красоты. Для мужчин, да.
+                </p>
+                <a class="card-price button" href="#">9 900 ₽</a>
+              </div>
             </li>
             <li class="project-card">
               <img class="card-image" src="img/mishka.png" alt="mishka" />
-              <div></div>
+              <div class="card-info">
+                <h3 class="card-title">MISHKA</h3>
+                <p class="card-description">Интернет-магазин вязаных игрушек</p>
+                <a class="card-price button" href="#">9 900 ₽</a>
+              </div>
             </li>
             <li class="project-card">
               <img class="card-image" src="img/plus.png" alt="a plus" />
-              <div></div>
+              <div class="card-info">
+                <h3 class="card-title">A Plus</h3>
+                <p class="card-description">
+                  Лендинг курсов повышения квалификации
+                </p>
+                <a class="card-price button" href="#">9 900 ₽</a>
+              </div>
             </li>
             <li class="project-card">
               <img class="card-image" src="img/kvast.png" alt="kvast" />
-              <div></div>
+              <div class="card-info">
+                <h3 class="card-title">КВАСТ</h3>
+                <p class="card-description">
+                  Промо-сайт производителя крафтового кваса
+                </p>
+                <a class="card-price button" href="#">9 900 ₽</a>
+              </div>
             </li>
           </ul>
         </div>
@@ -263,13 +296,31 @@
       <section class="footer-contacts container">
         <ul class="social-list">
           <li class="social-item">
-            <img src="img/vk-icon.svg" width="26" height="15" alt="vk" />
+            <img
+              class="social-logo"
+              src="img/vk-icon.svg"
+              width="26"
+              height="15"
+              alt="vk"
+            />
           </li>
           <li class="social-item">
-            <img src="img/fb-icon.svg" width="12" height="22" alt="fb" />
+            <img
+              class="social-logo"
+              src="img/fb-icon.svg"
+              width="12"
+              height="22"
+              alt="fb"
+            />
           </li>
           <li class="social-item">
-            <img src="img/insta-icon.svg" width="21" height="21" alt="insta" />
+            <img
+              class="social-logo"
+              src="img/insta-icon.svg"
+              width="21"
+              height="21"
+              alt="insta"
+            />
           </li>
         </ul>
         <div class="footer-info">
