--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/min.style.css" />
+    <link rel="stylesheet" href="css/style.min.css" />
     <link rel="stylesheet" href="css/normalize.css" />
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
     <script src="./script/slider.js" defer></script>
